--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "wesley.vilaseca/projetocmsphp",
     "description": "sistema php padrão institucional e blog com criação de páginas dinâmica",
     "minimum-stability": "stable",
-    "license": "proprietary",
+    "license": "MIT",
     "authors": [
         {
             "name": "Wesley Vila Seca Sanches",
